fix; hide scrollbars

--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -4,6 +4,8 @@
 
 .preview {
 
+  @include hide-scrollbar;
+
   &__close-button {}
 
   &__inner {
