--- a/src/components/upload-modal/upload-modal.scss
+++ b/src/components/upload-modal/upload-modal.scss
@@ -3,6 +3,7 @@
 /*^ // ^======================== upload-modal ========================^ // ^*/
 
 .upload-modal {
+  @include hide-scrollbar;
 
   &__form {
     display: flex;
@@ -11,11 +12,11 @@
   }
 
   &__image-box {
-    background-color: #fff;
-    margin-bottom: const(30px);
     aspect-ratio: 1;
-    @include square(const(600px));
+    margin-bottom: const(30px);
     overflow: clip;
+    background-color: #fff;
+    @include square(const(600px));
 
     @media (max-width: $TABLET) {
       @include square(tab(600px, 300px));
@@ -23,16 +24,16 @@
   }
 
   &__image {
-    object-fit: contain;
     width: 100%;
     height: 100%;
+    object-fit: contain;
   }
 
   &__scale {
     position: absolute;
     left: 50%;
-    translate: -50%;
     top: const(10px);
+    translate: -50%;
   }
 
   &__effects {
@@ -49,8 +50,8 @@
     display: flex;
     flex-direction: column;
     gap: const(26px);
-    margin-bottom: const(30px);
     width: 100%;
+    margin-bottom: const(30px);
   }
 
   &__field-wrapper {
@@ -60,9 +61,9 @@
   &__field {
     padding-inline: const(10px);
     padding-block: const(5px);
-    background-color: #fff;
-    border-radius: const(5px);
     border: const(4px) solid transparent;
+    border-radius: const(5px);
+    background-color: #fff;
     transition: all 250ms;
 
     &:has(input:focus, textarea:focus) {
@@ -75,34 +76,34 @@
 
     input,
     textarea {
-      background-color: transparent;
       display: block;
-      @include square(100%);
+      background-color: transparent;
       font-size: const(14px);
+      @include square(100%);
     }
   }
 
   &__field-error {
+    width: 100%;
+    position: absolute;
+    top: calc(100% + const(2px));
     background-color: $red;
     color: #fff;
-    text-align: center;
     font-size: const(12px);
+    text-align: center;
     text-transform: uppercase;
-    position: absolute;
-    width: 100%;
-    top: calc(100% + const(2px));
   }
 
   &__button {
     padding-inline: const(40px);
     padding-block: const(10px);
+    border-radius: const(4px);
+    background-color: rgba(255, 231, 82, 0.2);
     color: $yellow;
-    text-align: center;
-    text-transform: uppercase;
     font-family: "Open Sans", "Arial", sans-serif;
     font-weight: 700;
-    background-color: rgba(255, 231, 82, 0.2);
-    border-radius: const(4px);
+    text-align: center;
+    text-transform: uppercase;
 
     &:disabled {
       opacity: 0.6;
